@@ -230,6 +230,20 @@ class UdevadmDevice:
                     return "BLUETOOTH"
                 else:
                     return "WIRELESS"
+            if (interface_class, interface_subclass, interface_protocol) ==\
+               (255, 255, 255) and self.driver == "btusb":
+                # This heuristic accounts for bluetooth devices which usually
+                # have INTERFACE=224/*/1, however in the "field" we've run
+                # across a few (Mediatek combo cards) that have unknown
+                # (255/255/255) values and thus break the previous heuristic.
+                # We assume that if a device has these weird INTERFACE values
+                # *but* it uses the btusb driver, then it must be a bluetooth
+                # controller.  Other devices with btusb *but* with
+                # INTERFACE=255/1/1 have been seen on systems where the actual
+                # usb controller was identified by the old heuristic, so here
+                # we need to match all three fields to avoid duplicating
+                # devices.  See http://pad.lv/1210405
+                    return "BLUETOOTH"
 
         if 'ID_INPUT_KEYBOARD' in self._environment:
             return "KEYBOARD"
